--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/queries.css">
 
     <title>Omnifood</title>
 </head>
+
 <body>
     <header class="header">
         <a href="#">
@@ -26,6 +28,11 @@
                 <li><a href="#" class="main-nav-link nav-cta">Try for Free</a></li>
             </ul>
         </nav>
+
+        <button class="btn-mobile-nav">
+            <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+            <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
     </header>
 
     <main>
